# LocalfileSearchAIPoweredAssistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
src/: __init__.py  index.py  reader.py  requirements.txt  server.py  vector_store.py
tests/: test_server.py
