[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-search-mcp"
version = "1.0.0"
description = "A Model Context Protocol server for local file search and reading"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
keywords = ["mcp", "file-search", "ai-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=0.1.0",
    "python-docx>=0.8.11",
    "pypdf>=4.0.0",
]

[project.scripts]
file-search-mcp = "src.server:main"

[project.urls]
Repository = "https://github.com/sxtest93/LocalfileSearchAIPoweredAssistant"
